--- a/references.bib
+++ b/references.bib
@@ -102,3 +102,20 @@
   year={2017},
   organization={The Royal Society}
 }
+
+@book{follmer2004stochastic,
+  title={Stochastic Finance: An Introduction in Discrete Time},
+  author={F{\"o}llmer, Hans and Schied, Alexander},
+  year={2004},
+  publisher={Walter de Gruyter}
+}
+
+@article{caflisch1998monte,
+  title={{Monte Carlo} and quasi-{Monte} {Carlo} methods},
+  author={Caflisch, Russel E},
+  journal={Acta numerica},
+  volume={7},
+  pages={1--49},
+  year={1998},
+  publisher={Cambridge Univ Press}
+}
